@@ -1,3 +1,9 @@
+2007-06-07  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* inf-haskell.el (inferior-haskell-error-regexp-alist): Add entries for
+	GHCI's exceptions.
+	(inferior-haskell-mode): Set compilation-first-column.
+
 2007-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* inf-haskell.el (inferior-haskell-use-cabal): New custom var.
